[FIX] overflow width pixels on chinchin detail page

--- a/app/assets/stylesheets/mobile/mobile.css.scss
+++ b/app/assets/stylesheets/mobile/mobile.css.scss
@@ -616,15 +616,15 @@ div.mutual-friends img {
 }
 
 .tab-profile a {
-  width: 33.5%;
+  width: 33.3%;
 }
 
 .tab-photos a {
-  width: 34%;
+  width: 33.4%;
 }
 
 .tab-friends a {
-  width: 33.5%;
+  width: 33.3%;
 }
 
 .tabs a.active {
